--- a/automation/kodi.yaml
+++ b/automation/kodi.yaml
@@ -1,4 +1,83 @@
 #####################################################################
+### Turn off the lights when a movie is playing
+#####################################################################
+
+- alias: "kodi playing"
+  hide_entity: True
+  trigger:
+    - platform: state
+      entity_id: sensor.living_room_kodi_playback_state
+      to: 'playing'
+
+    - platform: state
+      entity_id: sensor.living_room_kodi_playback_state
+      to: 'resumed'
+
+    - platform: state
+      entity_id: media_player.kodi_living_room
+      to: 'playing'
+      from: 'idle'
+
+  condition: 
+    - condition: state
+      entity_id: sun.sun
+      state: 'below_horizon'
+
+  action:
+      service: scene.turn_on
+      entity_id: scene.movie_time
+
+#####################################################################
+### Dim the lights when kodi is paused
+#####################################################################
+
+- alias: "kodi paused"
+  hide_entity: True
+  trigger:
+    - platform: state
+      entity_id: sensor.living_room_kodi_playback_state
+      to: 'paused'
+
+    - platform: state
+      entity_id: media_player.kodi_living_room
+      from: 'playing'
+      to: 'idle'
+
+  condition: 
+    - condition: state
+      entity_id: sun.sun
+      state: 'below_horizon'
+
+  action:
+    - service: scene.turn_on
+      entity_id: scene.movie_paused
+
+#####################################################################
+### Return Living Room to normal after movie ends
+#####################################################################
+
+- alias: "kodi ended or stopped"
+  hide_entity: True
+  trigger:
+    - platform: state
+      entity_id: sensor.living_room_kodi_playback_state
+      to: 'stopped'
+
+    - platform: state
+      entity_id: sensor.living_room_kodi_playback_state
+      to: 'ended'
+
+  condition: 
+    - condition: state
+      entity_id: sun.sun
+      state: 'below_horizon'
+
+  action:
+    - service: scene.turn_on
+      entity_id: scene.movie_ended
+
+# Combined CONFIG kudos to @skalavala (not triggering reliably)
+#####################################################################
 ### Auto adjust lighting scenes when video is playing
 #####################################################################
 
@@ -30,83 +109,3 @@
           {% else %}
             scene.living_room_dim
           {% endif %}
-
-
-# OLD CONFIG used separate automations, the above combines them kudos to @skalavala
-######################################################################
-#### Turn off the lights when a movie is playing
-######################################################################
-#
-#- alias: "kodi playing"
-#  hide_entity: True
-#  trigger:
-#    - platform: state
-#      entity_id: sensor.living_room_kodi_playback_state
-#      to: 'playing'
-#
-#    - platform: state
-#      entity_id: sensor.living_room_kodi_playback_state
-#      to: 'resumed'
-#
-#    - platform: state
-#      entity_id: media_player.kodi_living_room
-#      to: 'playing'
-#      from: 'idle'
-#
-#  condition: 
-#    - condition: state
-#      entity_id: sun.sun
-#      state: 'below_horizon'
-#
-#  action:
-#      service: scene.turn_on
-#      entity_id: scene.movie_time
-#
-######################################################################
-#### Dim the lights when kodi is paused
-######################################################################
-#
-#- alias: "kodi paused"
-#  hide_entity: True
-#  trigger:
-#    - platform: state
-#      entity_id: sensor.living_room_kodi_playback_state
-#      to: 'paused'
-#
-#    - platform: state
-#      entity_id: media_player.kodi_living_room
-#      from: 'playing'
-#      to: 'idle'
-#
-#  condition: 
-#    - condition: state
-#      entity_id: sun.sun
-#      state: 'below_horizon'
-#
-#  action:
-#    - service: scene.turn_on
-#      entity_id: scene.movie_paused
-#
-######################################################################
-#### Return Living Room to normal after movie ends
-######################################################################
-#
-#- alias: "kodi ended or stopped"
-#  hide_entity: True
-#  trigger:
-#    - platform: state
-#      entity_id: sensor.living_room_kodi_playback_state
-#      to: 'stopped'
-#
-#    - platform: state
-#      entity_id: sensor.living_room_kodi_playback_state
-#      to: 'ended'
-#
-#  condition: 
-#    - condition: state
-#      entity_id: sun.sun
-#      state: 'below_horizon'
-#
-#  action:
-#    - service: scene.turn_on
-#      entity_id: scene.movie_ended
