--- a/automation/lights_living_room.yaml
+++ b/automation/lights_living_room.yaml
@@ -22,16 +22,46 @@
       entity_id: scene.living_room_normal
 
 #####################################################################
-### Turn off the lights if the sun is up
+### Brighten the home once we are awake and getting ready for work
 #####################################################################
 
-- alias: turn off lights at sun up
+- alias: brighten the house once sun is up
   hide_entity: True
   trigger:
     - platform: numeric_state
       entity_id: sun.sun
       value_template: '{{ state.attributes.elevation }}'
-      above: 6
+      above: 4.25
+
+  condition:
+    - condition: state
+      entity_id: group.all_lights
+      state: 'on'
+
+    - condition: time
+      after: '04:00:00'
+      before: '08:00:00'
+
+  action:
+    - service: scene.turn_on
+      entity_id: scene.living_room_bright
+
+    - service: light.turn_on
+      entity_id: light.ge_12724_3way_dimmer_switch_level_33_0
+      data:
+        brightness: 255
+
+#####################################################################
+### Turn off the lights after the sun is up high
+#####################################################################
+
+- alias: turn off lights once sun is up high enough
+  hide_entity: True
+  trigger:
+    - platform: numeric_state
+      entity_id: sun.sun
+      value_template: '{{ state.attributes.elevation }}'
+      above: 11
 
   condition:
     - condition: state
