--- a/scenes/movie_profiles.yaml
+++ b/scenes/movie_profiles.yaml
@@ -5,27 +5,24 @@
 - name: Movie Time
   entities:
 
-# turn off the hue entry_lighting
+## turn off the hue entry_lighting
     group.entry_lighting:
       state: off
       transition: 5
 
-# turn off the living room lamp
+## turn off the living room lamp
     light.living_room_lamp:
       state: off
       transition: 15
 
-# turn off the hue living_room_ceiling lights
+## turn off the hue living_room_ceiling lights
     group.living_room_ceiling:
       state: off
       transition: 10
 
-# turn off the Kitchen Lights
-    light.ge_12724_3way_dimmer_switch_level_33_0:
-      state: off
-
-# turn off the accent_lights "catch all"
-    group.accent_lights: off
+## turn off the Kitchen Lights (suspended)
+#    light.ge_12724_3way_dimmer_switch_level_33_0:
+#      state: off
 
 #####################################################################
 ### Movie Paused
@@ -34,36 +31,36 @@
 - name: Movie Paused
   entities:
 
-# turn on the kitchen lights
-    light.ge_12724_3way_dimmer_switch_level_33_0:
-      state: on
-      brightness: 75
+## turn on the kitchen lights
+#    light.ge_12724_3way_dimmer_switch_level_33_0:
+#      state: on
+#      brightness: 75
 
-# turn on kitchen entry light
+## turn on kitchen entry light
     light.kitchen_entry:
       state: on
       brightness: 50
       transition: 10
 
-# turn on the south entry light
+## turn on the south entry light
     light.south_entry:
       state: on
       brightness: 75
       transition: 10
 
-# turn on the center entry light
+## turn on the center entry light
     light.center_entry:
       state: on
       brightness: 50
       transition: 10
 
-# turn on the living room lamp
+## turn on the living room lamp
     light.living_room_lamp:
       state: on
       brightness: 75
       transition: 10
 
-# turn on the hue living_room_ceiling lights
+## turn on the hue living_room_ceiling lights
     group.living_room_ceiling:
       state: on
       brightness: 50
@@ -76,34 +73,32 @@
 - name: Movie Ended
   entities:
 
-# turn on kitchen entry light
+## turn on kitchen entry light
     light.kitchen_entry:
       state: on
       brightness: 160
       transition: 30
 
-# turn on the south entry light
+## turn on the south entry light
     light.south_entry:
       state: on
       brightness: 100
       transition: 10
 
-# turn on the center entry light
+## turn on the center entry light
     light.center_entry:
       state: on
       brightness: 50
       transition: 10
 
-# turn on the living room lamp
+## turn on the living room lamp
     light.living_room_lamp:
       state: on
       brightness: 200
       transition: 60
 
-# turn on the hue living_room_ceiling lights
+## turn on the hue living_room_ceiling lights
     group.living_room_ceiling:
       state: on
       brightness: 100
       transition: 30
-
-    group.accent_lights: on
